--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+        integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/slick.css">
+
 
 </head>
 
@@ -176,12 +185,40 @@
                     <button class="custom-btn btn-12"><span>Burger Details!</span><span>Big King</span></button>
                 </div>
             </div>
-           
+
         </div>
-        <div class="burger-house-company-product-s-image col-12">
-            <div class="slick">
-                <img src="assets/img/Image3.png">
-                <img src="assets/img/Image3.png">
+    </section>
+    <section class="burger-house-slider">
+        <div class="Slider">
+            <div class="item" style="background-color: rgb(255, 255, 255);">
+                <div class="inner-Image">
+                    <span><img src="assets/img/asaassaas.png"></span>
+                    <span>DISCOVER</span>
+                    <span>UPCOMING EVENTS</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas accumsan lacus vel facilisis. </span>
+                </div>
+            </div>
+            <div class="item" style="background-color:rgb(255, 255, 255);">
+                <div class="inner-Image">
+                    <span><img src="assets/img/asaassaas.png"></span>
+                    <span>DISCOVER</span>
+                    <span>UPCOMING EVENTS</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas accumsan lacus vel facilisis. </span>
+                </div>
+            </div>
+            <div class="item" style="background-color:rgb(255, 255, 255);">
+                <div class="inner-Image">
+                    <span><img src="assets/img/asaassaas.png"></span>
+                    <span>DISCOVER</span>
+                    <span>UPCOMING EVENTS</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas accumsan lacus vel facilisis. </span>
+                </div>
             </div>
         </div>
     </section>
@@ -189,11 +226,15 @@
 
 </html>
 <script>
-    $('.slick').slick({
-        dots: true,
-        infinite: true,
-        speed: 500,
-        fade: true,
-        cssEase: 'linear'
+    $(document).ready(function () {
+        // Slik Slider Call
+        $('.Slider').slick({
+            arrows: false,
+            dots: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 1,
+            adaptiveHeight: false
+        });
     });
 </script>
