--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </a>
             </div>
             <div class="burger-house-catalog-r col-6">
-                <div class="burger-house-catalog-r row">
+                <div class="burger-house-catalog-r">
                     <div class="burger-house-catalog-u">
                         <a href="">
                             <img class="catalog-up-image" width="25" src="assets/img/Image2.png">
@@ -258,6 +258,53 @@
             <div class="burger-house-reservation-table-right-image">
                 <img src="assets/img/l3.png">
             </div>
+        </div>
+    </section>
+    <section class="burger-house-site-end">
+        <div class="burger-house-site-end-logo">
+            <img width="550px" src="assets/img/logoend.png">
+        </div>
+        <div class="burger-house-site-end-left-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan
+                lacus vel facilisis. </p>
+        </div>
+        <div class="burger-house-site-end-right-location-mail">
+            <ul class="burger-house-site-end-right-ul">
+                <li class="burger-house-site-end-right-li-1">
+                    <img src="assets/img/Location Icon.png">
+                    <p>Main Road, Building Name, Country</p>
+                </li>
+                <li class="burger-house-site-end-right-li-2">
+                    <img src="assets/img/Email.png">
+                    <p>info@burgerhouse.com</p>
+                </li>
+            </ul>
+        </div>
+        <div class="burger-house-site-end-left-bottom-text">
+            <p>© Company Name 2022. All rights reserved. By. Koray GÜNDOĞDU</p>
+        </div>
+        <div class="burger-house-site-end-right-bottom-logo-s">
+            <ul>
+                <li>
+                    <a href="#"><img src="assets/img/Instagram.png"></a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/img/Facebook.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/img/Twitter.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/img/WhatsApp.png">
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
