--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section class="burger-house-catalog col-12">
         <div class="burger-house-catalog row">
             <div class="burger-house-catalog-l col-6">
-                <a href="">
+                <a class="burger-house-catalog-l" href="#">
                     <img class="catalog-left-image" src="assets/img/Burger Image1.png">
                     <p class="catalog-left-image-ft">TRY IT TODAY</p>
                     <p class="catalog-left-image-st">MOST POPULAR BURGER</p>
@@ -122,7 +122,7 @@
             <div class="burger-house-catalog-r col-6">
                 <div class="burger-house-catalog-r">
                     <div class="burger-house-catalog-u">
-                        <a href="">
+                        <a class="burger-house-catalog-u" href="#">
                             <img class="catalog-up-image" width="25" src="assets/img/Image2.png">
                             <p class="catalog-right-up-image-ft">TRY IT TODAY</p>
                             <p class="catalog-right-up-image-st">MORE FUN</p>
@@ -130,7 +130,7 @@
                         </a>
                     </div>
                     <div class="burger-house-catalog-d">
-                        <a href="">
+                        <a class="burger-house-catalog-d" href="#">
                             <img class="catalog-down-image" src="assets/img/Image3.png">
                             <p class="catalog-right-down-image-ft">TRY IT TODAY</p>
                             <p class="catalog-right-down-image-st">FRESH & CHILI</p>
@@ -154,7 +154,7 @@
         <div class="burger-house-company-product-s-image col-12">
             <div class="burger-house-company-product-s-image-f col-4">
                 <div class="company-item-f">
-                    <img src="assets/img/1.png">
+                    <img class="burger-house-company-product-s-image-burger-f" src="assets/img/1.png">
                     <img class="burger-house-company-product-s-image-shadow-f" width="500" src="assets/img/Shadow.png">
                     <p class="burger-house-company-f-product-f-t">Lorem, ipsum dolor.</p>
                     <p class="burger-house-company-f-product-s-t">Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -164,7 +164,7 @@
             </div>
             <div class="burger-house-company-product-s-image-s col-4">
                 <div class="company-item-s">
-                    <img class="burger-house-company-product-s-image-s-s" width="500" src="assets/img/2.png">
+                    <img class="burger-house-company-product-s-image-burger-s" width="500" src="assets/img/2.png">
                     <img class="burger-house-company-product-s-image-shadow-s" width="900" src="assets/img/Shadow.png">
                     <p class="burger-house-company-s-product-f-t">Lorem, ipsum dolor.</p>
                     <p class="burger-house-company-s-product-s-t">Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -176,13 +176,13 @@
             </div>
             <div class="burger-house-company-product-s-image-t col-4">
                 <div class="company-item-t">
-                    <img src="assets/img/3.png">
+                    <img class="burger-house-company-product-s-image-burger-t" src="assets/img/3.png">
                     <img class="burger-house-company-product-s-image-shadow-t" width="500" src="assets/img/Shadow.png">
                     <p class="burger-house-company-t-product-f-t">Lorem, ipsum dolor.</p>
                     <p class="burger-house-company-t-product-s-t">Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit.
                         Quae, incidunt.</p>
-                    <button class="custom-btn btn-12"><span>Burger Details!</span><span>Big King</span></button>
+                    <button class="custom-btn right-here-three btn-12"><span>Burger Details!</span><span>Big King</span></button>
                 </div>
             </div>
 
