--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <p>RESERVATİON</p>
                 <p>BOOK YOUR TABLE</p>
             </div>
-            <div class="container">
+            <div class="burger-house-reservation-text-box-con container">
                 <div class="burger-house-reservation-table-center-text-box row">
                     <div class="burger-house-reservation-table-center-text-box-s col-6">
                         <input type="text" class="login__input" placeholder="NAME">
