--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </li>
 
                 <li class="burger-house-nav-item">
-                    <a class="burger-house-nav-link" href="#">CONTACT US</a>
+                    <a class="burger-house-nav-link" href="index-2.html">CONTACT US</a>
                 </li>
             </ul>
         </div>
